# tree-sitter-spss

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  file_candidate.sps  flake.nix  go.mod  grammar.js  package.json  pyproject.toml  result  setup.py  temp.txt  test.txt  tree-sitter.json
.ccls-cache/@@home@alkaline@Repos@tree-sitter-spss/: @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@alloca.h.blob  @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@assert.h.blob  @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@bits@atomic_wide_counter.h.blob  @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@bits@byteswap.h.blob  @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@bits@endian.h.blob  @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@bits@endianness.h.blob  @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@bits@floatn-common.h.blob  @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@bits@floatn.h.blob  @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@bits@libc-header-start.h.blob  @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@bits@long-double.h.blob  @nix@store@1ycjq6h047qqwp3fm9sbl805xnrxlh2h-glibc-2.40-66-dev@include@bits@pthreadtypes-arch.h.blob  (+64 more)
bindings/go/: binding.go  (+1 more)
queries/: highlights.scm  indents.scm  injections.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test_files/: OSFDissVarCleanANDMeasures.sps  SPSS syntax.sps  test.sps  test2.sps
(+35 files in other folders)
